# mdonkey

./: CMakeLists.txt  README.md
adonkey/: CMakeLists.txt
adonkey/assets/spr/: Bild1.psp  Bild2.ppm  chars_8x8x1_v_5k_b.bin.psp  jump_man.psp  kong.psp  mameBild2.ppm  mameBild2.psp  p1.pal  ppm.psp  sprites.psp  test.ppm  title.psp  world.psp
adonkey/src/: stub.cpp
adonkey/src/assets/: animations.hpp  cutscenes.cpp  cutscenes.h  cutscenes.hpp  fonts.cc  fonts.cpp  sounds.cpp  sounds.h  sounds.hpp  sprites.cpp  sprites.hpp
adonkey/src/core/: animation.cpp  animation.hpp  cutscene.cpp  cutscene.hpp  input.cpp  input.h  input.hpp  log.cpp  log.hpp  main.cpp  rand.cpp
adonkey/src/debug/: debug.cpp  debug.hpp
adonkey/src/game/: constants.cc  constants.cpp  constants.hpp  game.cc  game.cpp  intermission.cpp  play.cpp  types.hh  world.cpp  world.hpp
adonkey/src/hiscores/: hiscores.cpp
adonkey/src/hud/: hud.cpp
adonkey/src/menu/: menu.cpp
adonkey/src/stubs/: al_stubs.cpp  al_stubs.hpp
doc/: level_demo.txt  memory_layout.txt
framework/: CMakeLists.txt  framework.cpp  framework.h  pcxlib.c  pcxlib.h
mame/: CMakeLists.txt
mame/src/: driver.c  export_ppm.hpp  gfx.cpp  gfx.h  machine.c  mame.c  osdepend.h
mdonkey/: CMakeLists.txt  assets.z_ip
mdonkey/assets/: level_#1.psp  level_#11.psp  level_#2.psp  level_#21.psp  level_#3.psp  level_#31.psp  level_#4.psp  level_#41.psp
mdonkey/src/: game.cpp  main.cpp
roms/: dkongj.xml  kong.txt  tiles8x8.txt
roms/dkongj/: c_5f_b.bib.asm
tools/donkeyextract/: CMakeLists.txt
tools/donkeyview/: CMakeLists.txt
(+33 files in other folders)
